<resources>
    <string name="app_name">Composition</string>
    <string name="next">Понятно</string>
    <string name="number">Состав числа</string>
    <string name="welcome_logo">Welcome_logo</string>
    <string name="choose_level">Выберите уровень:</string>
    <string name="test">Тестовый</string>
    <string name="easy">Легкий</string>
    <string name="normal">Средний</string>
    <string name="hard">Тяжелый</string>
    <string name="text_time">00:00</string>
    <string name="tv_question">Правильных ответов %s (минимум %s)</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="retry_again">Попробовать снова</string>
    <string name="count_right_answers">Необходимое количество правильных ответов: %s</string>
    <string name="your_bill">Ваш счет: %s</string>
    <string name="percent_right_answers">Необходимый процент правильных ответов: %s</string>
    <string name="percent_answers">Процент првильных ответов: %s</string>
    <string name="description1">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.</string>
    <string name="description2">Пример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно юыть число 3, потому что 3 + 4 = 7</string>
</resources>