<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".presentation.ChooseLevelFragment"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/choose_level" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test" />

    <Button
        android:id="@+id/button_level_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#8BC34A"
        android:text="@string/easy" />

    <Button
        android:id="@+id/button_level_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF9800"
        android:text="@string/normal" />

    <Button
        android:id="@+id/button_level_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        android:text="@string/hard" />
</LinearLayout>
