<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="gameResult"
            type="com.example.composition.domain.entity.GameResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.GameFinishedFragment">


        <ImageView
            android:id="@+id/imageResult"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            app:imageResult="@{gameResult.winner}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:srcCompat="@drawable/smile" />

        <TextView
            android:id="@+id/tvNeedRightAnswers"
            style="@style/FinishedTextStyles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tvYouBill"
            tools:text="@string/count_right_answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageResult"
            app:layout_constraintVertical_chainStyle="packed"
            app:tvNeedRightAnswers="@{gameResult.gameSettings.minCountOfRightAnswers}" />

        <TextView
            android:id="@+id/tvYouBill"
            style="@style/FinishedTextStyles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tvRequiredPercentAnswers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/your_bill"
            app:tvYouBill="@{gameResult.countOfRightAnswers}"
            app:layout_constraintTop_toBottomOf="@+id/tvNeedRightAnswers" />

        <TextView
            android:id="@+id/tvRequiredPercentAnswers"
            style="@style/FinishedTextStyles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:tvRequiredPercentAnswers="@{gameResult.gameSettings.minPercentRightAnswers}"
            app:layout_constraintBottom_toTopOf="@+id/tvPercentRightAnswers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/percent_right_answers"
            app:layout_constraintTop_toBottomOf="@+id/tvYouBill"
            />

        <TextView
            android:id="@+id/tvPercentRightAnswers"
            style="@style/FinishedTextStyles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/percent_answers"
            app:tvPercentRightAnswers="@{gameResult}"
            app:layout_constraintBottom_toTopOf="@+id/returnButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRequiredPercentAnswers" />

        <Button
            android:id="@+id/returnButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/retry_again"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>