<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.composition.presentation.viewmodel.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.GameFragment">

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.formattedTime}"
            android:textColor="@color/purple_700"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/text_time" />

        <TextView
            android:id="@+id/tvSum"
            style="@style/OptionTextStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/circle_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTimer"
            app:numberText="@{viewModel.question.sum}"
            tools:text="1" />

        <TextView
            android:id="@+id/tvLeftNum"
            style="@style/OptionTextStyles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/teal_700"
            app:layout_constraintBottom_toTopOf="@+id/tvQuestion"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/tvRightNum"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSum"
            app:numberLeftText="@{viewModel.question.visibleNumber}"
            tools:text="7" />

        <TextView
            android:id="@+id/tvRightNum"
            style="@style/OptionTextStyles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/teal_700"
            app:layout_constraintBottom_toTopOf="@+id/tvQuestion"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvLeftNum"
            app:layout_constraintTop_toBottomOf="@+id/tvSum"
            tools:text="\?" />

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@{viewModel.progressAnswers}"
            app:enoughCount="@{viewModel.enoughCount}"
            app:layout_constraintBottom_toTopOf="@+id/tvSeparate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLeftNum"
            tools:text="@string/tv_question" />

        <ProgressBar
            android:id="@+id/tvSeparate"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:max="100"
            android:progress="@{viewModel.percentOfRightAnswers}"
            android:secondaryProgress="@{viewModel.minPercent}"
            app:enoughPercent="@{viewModel.enoughPercent}"
            app:layout_constraintBottom_toTopOf="@+id/tvOpt2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvQuestion" />

        <TextView
            android:id="@+id/tvOpt1"
            style="@style/OptionTextStyles"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:background="#46B846"
            android:gravity="center"
            android:text="@{viewModel.question.options.get(0).toString()}"
            app:layout_constraintBottom_toTopOf="@+id/tvOpt4"
            app:layout_constraintEnd_toStartOf="@+id/tvOpt2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSeparate"
            app:optionClick="@{(option) -> viewModel.chooseAnswers(option)}"
            tools:text="@string/_1" />


        <TextView
            android:id="@+id/tvOpt2"
            style="@style/OptionTextStyles"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_orange_light"
            android:text="@{viewModel.question.options.get(1).toString()}"
            app:layout_constraintBottom_toTopOf="@+id/tvOpt5"
            app:layout_constraintEnd_toStartOf="@+id/tvOpt3"
            app:layout_constraintStart_toEndOf="@+id/tvOpt1"
            app:layout_constraintTop_toBottomOf="@id/tvSeparate"
            app:optionClick="@{(option) -> viewModel.chooseAnswers(option)}"
            tools:text="@string/_2" />

        <TextView
            android:id="@+id/tvOpt3"
            style="@style/OptionTextStyles"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_purple"
            android:text="@{viewModel.question.options.get(2).toString()}"
            app:layout_constraintBottom_toTopOf="@+id/tvOpt6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvOpt2"
            app:layout_constraintTop_toBottomOf="@+id/tvSeparate"
            app:optionClick="@{(option) -> viewModel.chooseAnswers(option)}"
            tools:text="@string/_3" />

        <TextView
            android:id="@+id/tvOpt4"
            style="@style/OptionTextStyles"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#1DAABC"
            android:text="@{viewModel.question.options.get(3).toString()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvOpt5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOpt1"
            app:optionClick="@{(option) -> viewModel.chooseAnswers(option)}"
            tools:text="@string/_4" />

        <TextView
            android:id="@+id/tvOpt5"
            style="@style/OptionTextStyles"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#F44336"
            android:text="@{viewModel.question.options.get(4).toString()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvOpt6"
            app:layout_constraintStart_toEndOf="@+id/tvOpt4"
            app:layout_constraintTop_toBottomOf="@+id/tvOpt2"
            app:optionClick="@{(option) -> viewModel.chooseAnswers(option)}"
            tools:text="@string/_5" />

        <TextView
            android:id="@+id/tvOpt6"
            style="@style/OptionTextStyles"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#3692F4"
            android:text="@{viewModel.question.options.get(5).toString()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvOpt5"
            app:layout_constraintTop_toBottomOf="@+id/tvOpt3"
            app:optionClick="@{(option) -> viewModel.chooseAnswers(option)}"
            tools:text="@string/_6" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>